tlsClusterCAFile is not being used to validate client certificates on macOS

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v7.0, v6.3, v6.0, v5.0, v4.4
    • Security 2023-05-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      CVE-2023-1409

      Title:

      Certificate validation issue in MongoDB Server running on Windows or macOS

      CVE:

      CVE-2023-1409

      Description:

      If the MongoDB Server running on Windows or macOS is configured to use TLS with a specific set of configuration options that are already known to work securely in other platforms (e.g. Linux), it is possible that client certificate validation may not be in effect, potentially allowing client to establish a TLS connection with the server that supplies any certificate.

      This issue affect all MongoDB Server v6.3 versions, MongoDB Server v5.0 versions v5.0.0 to v5.0.14, all MongoDB Server v4.4 versions.

      CVSS Score:{}

       This issue's CVSS:3.1 severity is scored at 5.3 using the following scoring metrics:
      CVSS:3.1/AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:N/A:N

      All Affected Product Versions:

      MongoDB Server 6.3 

      MongoDB Server v5.0 versions v5.0.0 to v5.0.14

      All MongoDB Server v4.4 versions

      CWE:
      CWE-295: Improper Certificate Validation

      How was the Issue Found? (Internally/Externally):

      Internally

      Public Reference:

      SERVER-73662 SERVER-77028

            Assignee:
            Adrian Gonzalez Montemayor
            Reporter:
            Adrian Gonzalez Montemayor
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: