SERVER-77028 tlsClusterCAFile is not being used to validate client certificates on macOS